AC_INIT(src/rtcli.scm)

AM_INIT_AUTOMAKE(rtcli, 0.1)

AC_PREREQ(2.12)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_CHECK_PROG(CSC, csc, YES)
AC_CHECK_PROG(CHICKEN, chicken, YES)

AC_SUBST(CHICKENFLAGS,"")

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/version.scm])
AC_OUTPUT
